package io.github.unisim.world;

import java.time.Duration;
import java.time.Instant;
import java.util.Set;
import java.util.stream.Collectors;
import java.util.stream.Stream;
import com.badlogic.gdx.Gdx;
import com.badlogic.gdx.graphics.OrthographicCamera;
import com.badlogic.gdx.graphics.Texture;
import com.badlogic.gdx.graphics.g2d.SpriteBatch;
import com.badlogic.gdx.maps.tiled.TiledMap;
import com.badlogic.gdx.maps.tiled.TiledMapTileLayer;
import com.badlogic.gdx.maps.tiled.TmxMapLoader;
import com.badlogic.gdx.maps.tiled.renderers.IsometricTiledMapRenderer;
import com.badlogic.gdx.math.Matrix4;
import com.badlogic.gdx.math.Vector2;
import com.badlogic.gdx.math.Vector3;
import com.badlogic.gdx.utils.ScreenUtils;
import com.badlogic.gdx.utils.viewport.ScreenViewport;
import com.badlogic.gdx.utils.viewport.Viewport;

import io.github.unisim.GameState;
import io.github.unisim.Point;
import io.github.unisim.achievements.Achievement;
import io.github.unisim.achievements.AchievementManager;
import io.github.unisim.achievements.AchievementTracker;
import io.github.unisim.achievements.DefinedAchievements;
import io.github.unisim.building.Building;
import io.github.unisim.building.BuildingManager;
import io.github.unisim.building.BuildingType;
import io.github.unisim.finance.MoneyTracker;
import io.github.unisim.scoring.SatisfactionTracker;
import io.github.unisim.scoring.ScoreTracker;
import io.github.unisim.ui.AchievementBar;

/**
 * A class that holds all the gameplay elements of the game UniSim.
 * It has the ablity to render the game and update the state of the game
 */
public class World {
  private OrthographicCamera camera = new OrthographicCamera();
  private Viewport viewport = new ScreenViewport(camera);
  private TiledMap map = new TmxMapLoader().load("map/medium_map.tmx");
  public final Set<Integer> buildableTiles = Stream.of(
  14, 15).collect(Collectors.toSet());
  private float unitScale = 1f / 16f;
  private IsometricTiledMapRenderer renderer = new IsometricTiledMapRenderer(map, unitScale);
  private Vector2 camPosition = new Vector2(150f, 0f);
  private Vector2 panVelocity = new Vector2(0f, 0f);
  private float zoomVelocity = 0f;
  private final static float timeStepSize = 0.001f;
  private float panDt = 0f;
  private float zoomDt = 0f;
  private float minZoom;
  private float maxZoom;
  private SpriteBatch tileHighlightBatch = new SpriteBatch();
  private SpriteBatch buildingBatch = new SpriteBatch();
  private Texture tileHighlight = new Texture(Gdx.files.internal("map/tileHighlight.png"));
  private Texture errTileHighlight = new Texture(Gdx.files.internal("map/errTileHighlight.png"));
  private Matrix4 isoTransform;
  private Matrix4 invIsoTransform;
  private BuildingManager buildingManager;
  private boolean canBuild;
  private Point mousePosInWorld;
  private Point btmLeft;
  private Point topRight;
  public int menuKey;
  public Building selectedBuilding;
  public boolean selectedBuildingUpdated;
  public SatisfactionTracker satisfactionTracker = new SatisfactionTracker();
  public MoneyTracker moneyTracker = new MoneyTracker(1000);
  public ScoreTracker scoreTracker = new ScoreTracker();
  public AchievementManager achievementManager = new AchievementManager();
  public AchievementTracker achievementTracker = new AchievementTracker();
  public AchievementBar achievementBar;
  public int numberOfStudents;
  private float minX = 0f; //* Camera bounds for panning and zooming */
  private float maxX = 300f;
  private float minY = -75f;
  private float maxY = 75f;

  /**
   * Create a new World.
   */
  public World(AchievementBar achievementBar) {
    camera.zoom = 0.05f;
    initIsometricTransform();
    buildingManager = new BuildingManager(isoTransform);
    selectedBuilding = null;
    scoreTracker.addScoreObject(satisfactionTracker);
    this.achievementBar = achievementBar;
    numberOfStudents = 0;
  }

  /**
   * Releases all resources of this object.
   * Should be called when the World object is no longer needed
   */
  public void dispose() {
    map.dispose();
  }

  public void update() {
    if (!GameState.gameOver && !GameState.paused) {
      int accomodationCapacity = buildingManager.getBuildingCapacities(BuildingType.SLEEPING);
      int payingStudents = Math.min(accomodationCapacity, numberOfStudents);
      moneyTracker.updateMoney(payingStudents);
      satisfactionTracker.updateSatisfaction(buildingManager.getBuildings(), buildingManager.getPreviewBuilding(), numberOfStudents);
      scoreTracker.update();

        // Check achivement conditions

        if (!achievementTracker.satisfactionHasReachedTen && satisfactionTracker.getSatisfaction() >= 10) {
            achievementTracker.satisfactionHasReachedTen = true;
        }
        achievementTracker.satisfactionHasReachedTen |= satisfactionTracker.getSatisfaction() >= 10;
        if (achievementTracker.satisfactionHasReachedTen) {
            if (satisfactionTracker.getSatisfaction() <= 10) {
                if (achievementManager.unlockAchievement(DefinedAchievements.Overrated)) {
                    Achievement achievement = achievementManager.getAchievement(DefinedAchievements.Overrated);
                    achievementBar.setAchievement(achievement);
                }
            } else if (satisfactionTracker.getSatisfaction() >= 75) {
                Instant now = Instant.now();
                if (achievementTracker.timeSatisfactionReached75 == null) {
                    achievementTracker.timeSatisfactionReached75 = now;
                }
                Duration timeSinceSatisfactionReached75 = Duration.between(achievementTracker.timeSatisfactionReached75, now);
                if (timeSinceSatisfactionReached75.compareTo(Duration.ofSeconds(180)) >= 0) {
                    if (achievementManager.unlockAchievement(DefinedAchievements.LoveUni)) {
                        Achievement achievement = achievementManager.getAchievement(DefinedAchievements.LoveUni);
                        achievementBar.setAchievement(achievement);
                    }
                }
            }
        }
    }

    // Check achievement conditions

    if (moneyTracker.getMoney() == 0) {
        if (achievementManager.unlockAchievement(DefinedAchievements.Bankruptcy)) {
            achievementBar.setAchievement(achievementManager.getAchievement(DefinedAchievements.Bankruptcy));
        }
    } else if (moneyTracker.getMoney() >= 10_000) {
        if (achievementManager.unlockAchievement(DefinedAchievements.Capitalist)) {
            achievementBar.setAchievement(achievementManager.getAchievement(DefinedAchievements.Capitalist));
        }
    }
    if (achievementTracker.buildingsPlacedCount.values().stream().allMatch(x -> x >= 1)) {
        if (achievementManager.unlockAchievement(DefinedAchievements.OneOfEach)) {
            Achievement achievement = achievementManager.getAchievement(DefinedAchievements.OneOfEach);
            achievementBar.setAchievement(achievement);
        }
    }
  }

  /**
   * Steps the world forward by delta time and renders the world.
   */
  public void render() {
    update();

    viewport.apply();

    ScreenUtils.clear(0.59f, 0.72f, 1f, 1f);

    updatePan();
    updateZoom();

    // Render the map tiles
    // Render the map 0.0624 units lower than the rest of the world to account for
    // the extra pixel at the bottom of each tile. (The pixel is used to prevent
    // tiny gaps between the tiles caused by floating point errors)
    camera.position.set(camPosition.x, camPosition.y + 0.0624f, 0);
    camera.update();
    renderer.setView((OrthographicCamera) viewport.getCamera());
    renderer.render();

    // Reset the camera position to the correct value for the rest of the world
    camera.position.set(camPosition.x, camPosition.y, 0);
    camera.update();

    // Deselect the selected building if the game is over
    if (GameState.gameOver) {
      selectedBuilding = null;
      selectedBuildingUpdated = true;
    }

    // Update the mouse grid pos and the buildable flag
    Point mouseGridPos = getCursorGridPos();
    if (!mouseGridPos.equals(mousePosInWorld) || selectedBuildingUpdated) {
      mousePosInWorld = mouseGridPos;
      btmLeft = mousePosInWorld;
      Point buildingSize = selectedBuilding == null ? new Point(1, 1) : selectedBuilding.size;
      btmLeft.x -= buildingSize.x / 2;
      btmLeft.y -= buildingSize.y / 2;
      topRight = new Point(btmLeft.x + buildingSize.x - 1, btmLeft.y + buildingSize.y - 1);
      canBuild = buildingManager.isBuildable(btmLeft, topRight, getMapTiles(), buildableTiles);
      if (selectedBuilding != null) {
        canBuild = canBuild && moneyTracker.getMoney() >= selectedBuilding.cost;
        selectedBuilding.location = btmLeft;
      }
      buildingManager.setPreviewBuilding(selectedBuilding);
    }

    // Render the tile highlight
    if (selectedBuilding != null) {
      tileHighlightBatch.setProjectionMatrix(camera.combined);
      tileHighlightBatch.begin();
      highlightRegion(btmLeft, topRight, canBuild ? tileHighlight : errTileHighlight);
      tileHighlightBatch.end();
    }
    Building building = buildingManager.getBuildingAt(mouseGridPos);
    if (building != null && selectedBuilding == null) {
        Point topRight = new Point(
            building.location.x + building.size.x - 1,
            building.location.y + building.size.y - 1
        );
        tileHighlightBatch.setProjectionMatrix(camera.combined);
        tileHighlightBatch.begin();
        highlightRegion(building.location, topRight, errTileHighlight);
        tileHighlightBatch.end();
    }

    // render buildings after all map related rendering
    buildingBatch.setProjectionMatrix(camera.combined);
    buildingBatch.begin();
    buildingManager.render(buildingBatch);
    buildingBatch.end();
  }

  /**
   * Resizes the gameplay (usually to fit the size of the window)
   * This is mostly done by resizing the relevant viewports.

   * @param width  - The new width of the window
   * @param height - The new height of the window
   */
  public void resize(int width, int height) {
    if (camera.viewportHeight > 0) {
      camera.zoom *= (float) camera.viewportHeight / height;
    }
    viewport.update(width, height);
    minZoom = 10f / camera.viewportHeight;
    maxZoom = 100f / camera.viewportHeight;
  }


  /**
   * Limits the camera position to ensure it stays within the defined minimum and maximum bounds.
   *
   * Adjusts the camera's x and y coordinates so that they do not exceed the specified
   * minimum (minX, minY) and maximum (maxX, maxY) boundaries. If the camera's position is outside
   * these bounds, it will be set to the nearest boundary value.
   */
  private void clampCameraPosition() {
    if (camPosition.x < minX) {
        camPosition.x = minX;
    } else if (camPosition.x > maxX) {
        camPosition.x = maxX;
    }

    if (camPosition.y < minY) {
        camPosition.y = minY;
    } else if (camPosition.y > maxY) {
        camPosition.y = maxY;
    }
  }

  /**
   * Pans the view of the game by translating the camera by a multiple of the
   * vector (x, y).
   * The view will continue to move in the same direction for a short period
   * afterwards

   * @param x - The distance to pan horizontally
   * @param y - The distance to pan vertically
   */
  public void pan(float x, float y) {
    camPosition.add(x * camera.zoom, y * camera.zoom);
    clampCameraPosition();
    if (Gdx.input.isButtonPressed(0) || Gdx.input.isButtonPressed(1)
        || Gdx.input.isButtonPressed(2)) {
      panVelocity.set(x * timeStepSize / Gdx.graphics.getDeltaTime(),
          y * timeStepSize / Gdx.graphics.getDeltaTime());
    }
  }

  /**
   * Pans the view of the game by translating the camera by a multiple of the
   * vector (x, y).

   * @param x - The distance to pan horizontally
   * @param y - The distance to pan vertically
   */
  public void panWithoutInertia(float x, float y) {
    camPosition.add(x * camera.zoom, y * camera.zoom);
    clampCameraPosition();
  }

  /**
   * Tell the game to zoom in or out by a certain amount.

   * @param amount - The speed to zoom at; negative to zoom in and positive to
   *               zoom out
   */
  public void zoom(float amount) {
    final float zoomAcceleration = 0.0003f;
    zoomVelocity += amount * zoomAcceleration;
  }

  /**
   * Adjusts the zoom of the camera based on the zoomVelocity.
   * Also slightly reduces the zoomVelocity to prevent infinite zooming
   * Limits the zoom of the camera to be between minZoom and maxZoom
   */
  private void updateZoom() {
    zoomDt += Gdx.graphics.getDeltaTime();
    while (zoomDt > timeStepSize) {
      zoomDt -= timeStepSize;
      zoomVelocity *= 0.987f;
      float scaleFactor = (1f + zoomVelocity * (float) Math.sqrt(camera.zoom) / camera.zoom);
      if (camera.zoom * scaleFactor < minZoom) {
        scaleFactor = minZoom / camera.zoom;
      }
      if (camera.zoom * scaleFactor > maxZoom) {
        scaleFactor = maxZoom / camera.zoom;
      }
      panWithoutInertia(
          Gdx.input.getX() - camera.viewportWidth / 2, camera.viewportHeight / 2 - Gdx.input.getY()
      );
      camera.zoom *= scaleFactor;
      panWithoutInertia(
          camera.viewportWidth / 2 - Gdx.input.getX(), Gdx.input.getY() - camera.viewportHeight / 2
      );
    }
  }

  /**
   * Adjusts the panning of the camera based on the panVelocity.
   * Also slightly reduces the panVelocity to prevent infinite panning
   */
  private void updatePan() {
    panDt += Gdx.graphics.getDeltaTime();
    while (panDt > timeStepSize) {
      panDt -= timeStepSize;
      panVelocity.scl(0.987f);
      if (!(Gdx.input.isButtonPressed(0) || Gdx.input.isButtonPressed(1)
          || Gdx.input.isButtonPressed(2))) {
        panWithoutInertia(panVelocity.x, panVelocity.y);
      }
    }
  }

  /**
   * Returns the maximum allowed zoom level.
   *
   * @return - A float holding the mazimum allowed zoom level
   */
  public float getMaxZoom() {
    return maxZoom;
  }

  /**
   * Returns the current zoom level.
   *
   * @return - A float holding the current zoom level
   */
  public float getZoom() {
    return camera.zoom;
  }

  /**
   * Return the (x, y) co-ordinates of the grid cell that the mouse pointer
   * is currently within.

   * @return - A Vector2 containing the position of the cursor in grid space
   */
  public Point getCursorGridPos() {
    Vector3 unprojected = camera.unproject(
        new Vector3(Gdx.input.getX(), Gdx.input.getY(), 0)).mul(invIsoTransform);
    unprojected.add(0.45f, -0.45f, 0f);
    return new Point((int) Math.floor(unprojected.x), (int) Math.floor(unprojected.y));
  }

  /**
   * Highlight a rectangular region about the cursor with a given highlight texture.

   * @param btmLeft - The bottom left edge of the region
   * @param topRight - The top right edge of the region
   * @param highlightTexture - The texture to highlight the squares with
   */
  public void highlightRegion(Point btmLeft, Point topRight, Texture highlightTexture) {
    Point tilePos = new Point();
    for (tilePos.x = btmLeft.x; tilePos.x <= topRight.x; tilePos.x++) {
      for (tilePos.y = btmLeft.y; tilePos.y <= topRight.y; tilePos.y++) {
        Vector3 worldPos = gridPosToWorldPos(tilePos);
        tileHighlightBatch.draw(highlightTexture, worldPos.x, worldPos.y, 1, 1);
      }
    }
  }

  /**
   * Gets the camera position as a 2D vector.

   * @return a Vector2 holding the position of the camera
   */
  public Vector2 getCameraPos() {
    return new Vector2(camera.position.x, camera.position.y);
  }

  /**
   * Transforms a point from grid space to world space.

   * @param gridPos - The coordinates of the point in grid space
   * @return - The coordinates of the point in world space
   */
  private Vector3 gridPosToWorldPos(Point gridPos) {
    return new Vector3(
      (float) Math.floor(gridPos.x), (float) Math.floor(gridPos.y), 0f).mul(isoTransform);
  }

  /**
   * Calculates the matrices needed to transform a point into and outof isometric
   * world space.
   */
  private void initIsometricTransform() {
    // create the isometric transform
    isoTransform = new Matrix4();
    isoTransform.idt();

    // isoTransform.translate(0, 32, 0);
    isoTransform.scale((float) (Math.sqrt(2.0) / 2.0), (float) (Math.sqrt(2.0) / 4.0), 1.0f);
    isoTransform.rotate(0.0f, 0.0f, 1.0f, -45);

    // ... and the inverse matrix
    invIsoTransform = new Matrix4(isoTransform);
    invIsoTransform.inv();
  }

  public TiledMapTileLayer getMapTiles() {
    return (TiledMapTileLayer) map.getLayers().get(0);
  }

  /**
   * Place a building onto the map, called when a tile is clicked and building mode is enabled.

   * @return - True if building could be done successfully, false otherwise.
   */
  public boolean placeBuilding() {
    if (!canBuild) {
      return false;
    }
    moneyTracker.subtractMoney(selectedBuilding.cost);
    buildingManager.placeBuilding(
      new Building(
        selectedBuilding.texture, selectedBuilding.textureScale, selectedBuilding.textureOffset,
        selectedBuilding.reverseOffset, selectedBuilding.location.getNewPoint(),
        selectedBuilding.size.getNewPoint(), selectedBuilding.flipped, selectedBuilding.type,
        selectedBuilding.name, selectedBuilding.capacity, selectedBuilding.cost, selectedBuilding.quality
      )
    );
    achievementTracker.buildingsPlacedCount.put(selectedBuilding.texture,
        achievementTracker.buildingsPlacedCount.get(selectedBuilding.texture) + 1);
    selectedBuilding = null;
    return true;
  }

  public boolean removeBuilding(Point location) {
    Building building = buildingManager.getBuildingAt(location);
    if (building == null) {
        return false;
    }
    if (building.type == BuildingType.LEARNING) {
        if (achievementManager.unlockAchievement(DefinedAchievements.Dropout)) {
            Achievement achievement = achievementManager.getAchievement(DefinedAchievements.Dropout);
            achievementBar.setAchievement(achievement);
        }
    }
    moneyTracker.addMoney((int) (building.cost * 0.25f));
    boolean removed = buildingManager.removeBuilding(building);
    return removed;
  }

  /**
   * Returns the number of buildings of a certain type that have been placed
   * in the world.

   * @param type - The type of building
   * @return - An int holding the number of that building that have been placed
   */
  public int getBuildingCount(BuildingType type) {
    return buildingManager.getBuildingCount(type);
  }

  /**
   * Set the camera position to the starting point, rebuild the isometry matrices
   * and deselect the selected building.
   */
  public void reset() {
    camPosition = new Vector2(150f, 0f);
    panVelocity = new Vector2(0f, 0f);
    zoomVelocity = 0f;
    panDt = 0f;
    zoomDt = 0f;
    camera.zoom = 0.05f;
    initIsometricTransform();
    buildingManager = new BuildingManager(isoTransform);
    selectedBuilding = null;
    moneyTracker = new MoneyTracker(1000);
    achievementManager.clearSessionAchievements();
  }

  /**
   * Detects if the cursor is over a building in the game
   * @return true if the cursor is over a building
   */
  public boolean cursorOverBuilding() {
    return buildingManager.getBuildingAt(getCursorGridPos()) != null;
  }

  public void setStudentEnrollment(int studentCount) {
      numberOfStudents = studentCount;
  }

  public Iterable<Building> getBuildings() {
    return buildingManager.getBuildings();
  }

  public Integer getBuildingCapacities(BuildingType type) {
    return buildingManager.getBuildingCapacities(type);
  }
}
